# SQRLL_INI_Reader

./: CMakeLists.txt  README.md
Sources/: IniManager.cpp  IniManager.h  IniObject.cpp  IniObject.h  SQRLLIniObject.cpp  SQRLLIniObject.h  SQRLLParser.cpp  SQRLLParser.h
